--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -35,6 +35,42 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
 
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="15dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="@string/BCUcount"
+                                android:textColor="@color/primeBlue" />
+
+                            <TextView
+                                android:id="@+id/count"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="1"
+                                android:gravity="right"/>
+                        </LinearLayout>
+
+                        <Button
+                            android:layout_width="150dp"
+                            android:layout_height="30dp"
+                            android:id="@+id/refreshMapBtn"
+                            android:text="@string/refresh"
+                            android:background="@color/primeBlue"
+                            android:gravity="center"
+                            android:textColor="@color/whiteTextPrtime"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginBottom="10dp"
+                            android:onClick="startCharge"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/list"
+                            android:textColor="@color/primeBlue"
+                            android:layout_marginBottom="10dp"/>
                         <ListView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -42,24 +78,6 @@
                             android:id="@+id/mapList">
 
                         </ListView>
-                        <Button
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/refreshMapBtn"
-                            android:text="@string/refresh"
-                            android:background="@color/colorPrimary"
-                            android:textColor="@color/whiteTextPrtime"
-                            android:layout_marginTop="15dp"/>
-
-                        <Button
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:id="@+id/needChargeBtn"
-                            android:text="@string/needCharge"
-                            android:background="@color/warnPrime"
-                            android:textColor="@color/whiteTextPrtime"
-                            android:layout_marginTop="15dp"
-                            android:onClick="startCharge"/>
                     </LinearLayout>
 
                     <LinearLayout
@@ -67,112 +85,12 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:orientation="vertical">
-                        <ScrollView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
 
-                            >
-                            <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:orientation="vertical">
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:orientation="horizontal">
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="@string/capacity" />
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:id="@+id/capacityTv"
-                                        android:textColor="@color/colorPrimary"
-                                        android:text="25%"/>
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:textColor="@color/warnPrime"
-                                        android:text="@string/unCharging"
-                                        android:layout_marginLeft="10dp"/>
-
-                                </LinearLayout>
-
-                                <ProgressBar
-                                    android:id="@+id/chargeLvl"
-                                    style="?android:attr/progressBarStyleHorizontal"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="30dp"
-                                    android:clickable="false"
-                                    android:max="10000"
-                                    android:progress="2500" />
-
-                                <LinearLayout
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:orientation="horizontal">
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_marginBottom="15dp"
-                                        android:layout_marginRight="10dp"
-                                        android:text="@string/current"/>
-
-                                    <TextView
-                                        android:id="@+id/currentTv"
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:layout_alignBottom="@+id/seekBar1"
-                                        android:layout_alignParentRight="true"
-                                        android:layout_marginBottom="15dp"
-                                        android:layout_marginRight="10dp"
-                                        android:textColor="@color/primeBlue"/>
-
-                                    <TextView
-                                        android:layout_width="wrap_content"
-                                        android:layout_height="wrap_content"
-                                        android:text="@string/voltage"
-                                        android:gravity="right"
-                                        android:layout_marginRight="10dp"
-                                        android:layout_marginLeft="50dp"
-                                        android:layout_marginBottom="15dp"/>
-
-                                    <TextView
-                                        android:id="@+id/voltageTv"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="wrap_content"
-                                        android:layout_alignBottom="@+id/seekBar2"
-                                        android:layout_alignParentRight="true"
-                                        android:layout_marginBottom="15dp"
-                                        android:layout_marginRight="10dp"
-                                        android:textColor="@color/primeBlue"/>
-                                </LinearLayout>
-
-
-                                <com.github.mikephil.charting.charts.LineChart
-                                    android:id="@+id/chart1"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:minHeight="300dp"
-                                    android:layout_above="@+id/seekBar1"/>
-
-                                <com.github.mikephil.charting.charts.LineChart
-                                    android:id="@+id/chart2"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="match_parent"
-                                    android:minHeight="300dp">
-
-                                </com.github.mikephil.charting.charts.LineChart>
-
-
-
-
-                            </LinearLayout>
-
-                        </ScrollView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="22dp"
+                            android:text="@string/loginReq"/>
                     </LinearLayout>
 
                     <LinearLayout
